// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-livelike-cloud destination: trackEvent action - all fields 1`] = `
Object {
  "events": Array [
    Object {
      "action_description": "n]C0wig#f82f0li1(A",
      "action_key": "n]C0wig#f82f0li1(A",
      "action_name": "n]C0wig#f82f0li1(A",
      "livelike_profile_id": "n]C0wig#f82f0li1(A",
      "properties": Object {
        "testType": "n]C0wig#f82f0li1(A",
      },
      "timestamp": "2021-02-01T00:00:00.000Z",
      "user_id": "n]C0wig#f82f0li1(A",
    },
  ],
}
`;

exports[`Testing snapshot for actions-livelike-cloud destination: trackEvent action - required fields 1`] = `
Object {
  "events": Array [
    Object {
      "action_key": "n]C0wig#f82f0li1(A",
      "livelike_profile_id": "n]C0wig#f82f0li1(A",
      "timestamp": "2021-02-01T00:00:00.000Z",
      "user_id": "n]C0wig#f82f0li1(A",
    },
  ],
}
`;
